--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div class="heading">About</div>
             <div class="content"><h3>
                 <div class="items2">
+                    <button class="Y">Hello! I'm Yash Sonalekar From India.</button>
                     <button class="Tag">A Passionate learner diving into Creative Web Development, Machine Learning, and Competitive Programming, one project at a time.</button>
                     <button class="Brief">I'm currently in the learning phase, exploring how technology can solve real-world problems and make life easier. I also enjoy the challenge of competitive programming, as it helps me sharpen my problem-solving skills and logical thinking. As I continue to grow, I'm excited to work on projects that blend creativity and innovation while building a strong foundation in software development and AI</button>
                 </div>
@@ -58,7 +59,7 @@
                         @ Pimpri Chinchwad College of Engineering, Pune.
                     </button>
                     <button class="Tag2">
-                        Skills : WebDev, AiML,
+                        Skills : WebDev, AiML, Algorithmic Design, Software Engineering.
                     </button>
                     <button class="Brief2">
                         <ul>
@@ -95,10 +96,9 @@
         <div class="container">
             <div class="heading">Contact</div>
             <div class="content2"><h3>
-                <button class="IG">
-                    <a href="https://www.instagram.com/yash.hyprin/">Instagram</a>
-                </button>
-                <button class="L"><a href="https://www.linkedin.com/in/yash-sonalekar-3727722a0?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B7Iy2t5JSRKCsNIzP4qGfog%3D%3D">LinkedIn</a></button>
+                
+                <a href="https://www.instagram.com/yash.hyprin/"><button class="IG">Instagram</button></a>
+                <a href="https://www.linkedin.com/in/yash-sonalekar-3727722a0?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B7Iy2t5JSRKCsNIzP4qGfog%3D%3D"><button class="L">LinkedIn</button></a>
                 <button class="J"><a href="index.html">Twitter</a></button>
                 <button class="M"><a href="ysonalekar02@gmail.com">Mail Me</a></button>
             </h3></div>
