--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="heading">About</div>
             <div class="content"><h3>
                 <div class="items2">
-                    <button class="Y">Hello! I'm Yash Sonalekar From India.</button>
+                    <button class="Y">Hello! I'm Yash Sonalekar, I'm an Engineering Student From India.</button>
                     <button class="Tag">A Passionate learner diving into Creative Web Development, Machine Learning, and Competitive Programming, one project at a time.</button>
                     <button class="Brief">I'm currently in the learning phase, exploring how technology can solve real-world problems and make life easier. I also enjoy the challenge of competitive programming, as it helps me sharpen my problem-solving skills and logical thinking. As I continue to grow, I'm excited to work on projects that blend creativity and innovation while building a strong foundation in software development and AI</button>
                 </div>
